<resources>
    <string name="app_name">Топовый калькулятор</string>
    <string name="delete">Удалить</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="equally">=</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="free">3</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multi">x</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="division">/</string>
</resources>
