<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainView">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bt_close"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_delete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="1dp"
        android:background="#aaa"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/bt_division"
        app:layout_constraintLeft_toRightOf="@+id/bt_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_point"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/point"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_0"
        app:layout_constraintTop_toBottomOf="@+id/bt_1" />

    <Button
        android:id="@+id/bt_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/zero"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bt_point"
        app:layout_constraintRight_toLeftOf="@+id/bt_equally"
        app:layout_constraintTop_toBottomOf="@+id/bt_2" />

    <Button
        android:id="@+id/bt_equally"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#444"
        android:text="@string/equally"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bt_0"
        app:layout_constraintRight_toLeftOf="@+id/bt_plus"
        app:layout_constraintTop_toBottomOf="@+id/bt_3" />

    <Button
        android:id="@+id/bt_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#444"
        android:text="@string/plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bt_equally"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_minus" />

    <Button
        android:id="@+id/bt_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/one"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_point"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_2"
        app:layout_constraintTop_toBottomOf="@+id/bt_4" />

    <Button
        android:id="@+id/bt_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/two"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_0"
        app:layout_constraintLeft_toRightOf="@+id/bt_1"
        app:layout_constraintRight_toLeftOf="@+id/bt_3"
        app:layout_constraintTop_toBottomOf="@+id/bt_5" />

    <Button
        android:id="@+id/bt_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/free"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_equally"
        app:layout_constraintLeft_toRightOf="@+id/bt_2"
        app:layout_constraintRight_toLeftOf="@+id/bt_minus"
        app:layout_constraintTop_toBottomOf="@+id/bt_6" />

    <Button
        android:id="@+id/bt_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#444"
        android:text="@string/minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_plus"
        app:layout_constraintLeft_toRightOf="@+id/bt_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_multi" />

    <Button
        android:id="@+id/bt_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/four"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_5"
        app:layout_constraintTop_toBottomOf="@+id/bt_7" />

    <Button
        android:id="@+id/bt_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/five"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_2"
        app:layout_constraintLeft_toRightOf="@+id/bt_4"
        app:layout_constraintRight_toLeftOf="@+id/bt_6"
        app:layout_constraintTop_toBottomOf="@+id/bt_8" />

    <Button
        android:id="@+id/bt_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/six"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_3"
        app:layout_constraintLeft_toRightOf="@+id/bt_5"
        app:layout_constraintRight_toLeftOf="@+id/bt_multi"
        app:layout_constraintTop_toBottomOf="@+id/bt_9" />

    <Button
        android:id="@+id/bt_multi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#444"
        android:text="@string/multi"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_minus"
        app:layout_constraintLeft_toRightOf="@+id/bt_6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_division" />

    <Button
        android:id="@+id/bt_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="151dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/seven"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="151dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/eight"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_5"
        app:layout_constraintLeft_toRightOf="@+id/bt_7"
        app:layout_constraintRight_toLeftOf="@+id/bt_9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="151dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#ddd"
        android:text="@string/nine"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_6"
        app:layout_constraintLeft_toRightOf="@+id/bt_8"
        app:layout_constraintRight_toLeftOf="@+id/bt_division"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_division"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="151dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:background="#444"
        android:text="@string/division"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_multi"
        app:layout_constraintLeft_toRightOf="@+id/bt_9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="1dp"
        android:background="#aaa"
        android:text="Назад"
        app:layout_constraintBottom_toTopOf="@+id/bt_7"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_open"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_open"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="1dp"
        android:background="#444"
        android:text="("
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_8"
        app:layout_constraintLeft_toRightOf="@id/bt_back"
        app:layout_constraintRight_toLeftOf="@+id/bt_close"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_close"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="1dp"
        android:background="#444"
        android:text=")"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_9"
        app:layout_constraintLeft_toRightOf="@id/bt_open"
        app:layout_constraintRight_toLeftOf="@+id/bt_delete"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>